# prius_nav

./: .gitignore  .gitmodules  pydebug.bash
car_demo/: CMakeLists.txt
car_demo/launch/: demo.launch
exploratorio/: CMakeLists.txt  README.md  package.xml  scene_generator_requirements.txt
exploratorio/notes/: tests.ipynb
exploratorio/scripts/: camera_replay.py  dump_images.py  landmarker.py  online_dataset.py  pid_explorer.py  reformat_dataset.py  scene_generator.py  scene_parser.py  sfm_trainer.py  simple_dataset.py  train_util.py
exploratorio/scripts/sfm/: README.md  custom_transforms.py  inverse_warp.py  loss_functions.py  sfm_model.py  utils.py
exploratorio/scripts/sfm/models/: disp_net.py  pose_exp_net.py
exploratorio/test/: test_camera_replay.py  test_scene_parser.py  test_sfm_integ.py
laser_listener/: CMakeLists.txt  package.xml
laser_listener/src/: scan_retriever.cpp
prius_autonav/: CMakeLists.txt  package.xml
prius_description/: CMakeLists.txt
prius_description/urdf/: prius.urdf
prius_msgs/: CMakeLists.txt
prius_msgs/msg/: DataBatchRequest.msg
scene-generation/: README.md  main.py  requirements.txt  setup.bash
unused/receivers/: CMakeLists.txt  package.xml
unused/receivers/src/: exploration.cxx
